[gd_scene load_steps=36 format=2]

[ext_resource path="res://resources/scripts/Shop.gd" type="Script" id=1]
[ext_resource path="res://resources/backgrounds/startup.png" type="Texture" id=2]
[ext_resource path="res://resources/gamefonts/Pacifico.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://resources/backgrounds/indian_ocean.png" type="Texture" id=4]
[ext_resource path="res://resources/backgrounds/rockymountains.png" type="Texture" id=5]
[ext_resource path="res://resources/backgrounds/spacejet.png" type="Texture" id=6]
[ext_resource path="res://resources/backgrounds/zebramountain.png" type="Texture" id=7]
[ext_resource path="res://resources/backgrounds/grasslands.png" type="Texture" id=8]
[ext_resource path="res://resources/backgrounds/city.jpg" type="Texture" id=9]
[ext_resource path="res://resources/backgrounds/warzone.png" type="Texture" id=10]
[ext_resource path="res://resources/backgrounds/desert.png" type="Texture" id=11]
[ext_resource path="res://resources/backgrounds/mountainwoodsmorning.jpg" type="Texture" id=12]
[ext_resource path="res://resources/backgrounds/mountainwoodsevening.png" type="Texture" id=13]
[ext_resource path="res://resources/backgrounds/mountainwoodsnight.jpg" type="Texture" id=14]
[ext_resource path="res://resources/backgrounds/sunset_forest.png" type="Texture" id=15]
[ext_resource path="res://resources/icon/back.png" type="Texture" id=16]
[ext_resource path="res://resources/icon/goto.png" type="Texture" id=17]
[ext_resource path="res://regionpopup.tres" type="StyleBox" id=18]
[ext_resource path="res://resources/gamefonts/AUGUSTUS.TTF" type="DynamicFontData" id=19]
[ext_resource path="res://resources/gamefonts/SEVESBRG.TTF" type="DynamicFontData" id=20]
[ext_resource path="res://equipbutton.tres" type="StyleBox" id=21]
[ext_resource path="res://resources/icon/close.png" type="Texture" id=22]

[sub_resource type="StyleBoxFlat" id=1]
border_color = Color( 0.87451, 0.439216, 0.121569, 1 )
corner_radius_bottom_left = 10

[sub_resource type="DynamicFont" id=2]
size = 25
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 25
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
size = 25
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=5]
size = 100
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.894118, 0.0470588, 0.0470588, 1 )
border_color = Color( 0.0313726, 0.00784314, 0.00784314, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.894118, 0.0470588, 0.0470588, 1 )
border_color = Color( 0.0431373, 0.00784314, 0.00784314, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.894118, 0.0470588, 0.0470588, 1 )
border_color = Color( 0.0156863, 0.00392157, 0.00392157, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="DynamicFont" id=9]
size = 30
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=10]
size = 40
font_data = ExtResource( 19 )

[sub_resource type="DynamicFont" id=11]
size = 60
font_data = ExtResource( 20 )

[sub_resource type="StyleBoxFlat" id=12]
bg_color = Color( 0.223529, 0.901961, 0.0823529, 1 )
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30

[sub_resource type="DynamicFont" id=13]
size = 40
font_data = ExtResource( 19 )

[node name="Shop" type="Node2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
centered = false

[node name="Control" type="Control" parent="."]
margin_left = -5.33936
margin_right = 1914.66
margin_bottom = 1080.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Startup" type="Button" parent="Control"]
margin_left = 127.666
margin_top = 222.545
margin_right = 427.666
margin_bottom = 422.545
custom_styles/normal = SubResource( 1 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="Control/Startup"]
scale = Vector2( 0.155, 0.185 )
texture = ExtResource( 2 )
centered = false

[node name="Label" type="Label" parent="Control/Startup"]
margin_left = 1.0
margin_top = 129.0
margin_right = 281.0
margin_bottom = 158.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "BLUE ICY MOUNTAINS"
align = 1

[node name="IndianOcean" type="Button" parent="Control"]
margin_left = 476.158
margin_top = 222.545
margin_right = 776.158
margin_bottom = 422.545
custom_styles/normal = SubResource( 1 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="Control/IndianOcean"]
scale = Vector2( 0.155, 0.185 )
texture = ExtResource( 4 )
centered = false

[node name="Label" type="Label" parent="Control/IndianOcean"]
margin_left = 1.0
margin_top = 129.0
margin_right = 281.0
margin_bottom = 158.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "INDIAN OCEAN"
align = 1

[node name="RokyMountains" type="Button" parent="Control"]
margin_left = 836.98
margin_top = 220.167
margin_right = 1136.98
margin_bottom = 420.167
custom_styles/normal = SubResource( 1 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="Control/RokyMountains"]
scale = Vector2( 0.155, 0.185 )
texture = ExtResource( 5 )
centered = false

[node name="Label" type="Label" parent="Control/RokyMountains"]
margin_left = 1.0
margin_top = 129.0
margin_right = 281.0
margin_bottom = 158.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "ROCKY MOUNTAINS"
align = 1

[node name="SpaceJet" type="Button" parent="Control"]
margin_left = 1188.33
margin_top = 222.545
margin_right = 1488.33
margin_bottom = 422.545
custom_styles/normal = SubResource( 1 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="Control/SpaceJet"]
scale = Vector2( 0.155, 0.185 )
texture = ExtResource( 6 )
centered = false

[node name="Label" type="Label" parent="Control/SpaceJet"]
margin_left = 1.0
margin_top = 129.0
margin_right = 281.0
margin_bottom = 158.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "SPACE JET"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ZebraMountain" type="Button" parent="Control"]
margin_left = 1537.32
margin_top = 222.545
margin_right = 1837.32
margin_bottom = 422.545
custom_styles/normal = SubResource( 1 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="Control/ZebraMountain"]
scale = Vector2( 0.155, 0.185 )
texture = ExtResource( 7 )
centered = false

[node name="Label" type="Label" parent="Control/ZebraMountain"]
margin_left = 1.0
margin_top = 129.0
margin_right = 281.0
margin_bottom = 158.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "ZEBRA MOUNTAIN"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GrassLands" type="Button" parent="Control"]
margin_left = 127.666
margin_top = 526.982
margin_right = 427.666
margin_bottom = 726.982
custom_styles/normal = SubResource( 1 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="Control/GrassLands"]
scale = Vector2( 0.155, 0.185 )
texture = ExtResource( 8 )
centered = false

[node name="Label" type="Label" parent="Control/GrassLands"]
margin_left = 1.0
margin_top = 129.0
margin_right = 281.0
margin_bottom = 158.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "GRASS LANDS"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BlackCity" type="Button" parent="Control"]
margin_left = 476.158
margin_top = 526.982
margin_right = 776.158
margin_bottom = 726.982
custom_styles/normal = SubResource( 1 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="Control/BlackCity"]
scale = Vector2( 0.155, 0.185 )
texture = ExtResource( 9 )
centered = false

[node name="Label" type="Label" parent="Control/BlackCity"]
margin_left = 1.0
margin_top = 129.0
margin_right = 281.0
margin_bottom = 158.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "BLACK CITY"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WarZone" type="Button" parent="Control"]
margin_left = 836.98
margin_top = 526.982
margin_right = 1136.98
margin_bottom = 726.982
custom_styles/normal = SubResource( 1 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="Control/WarZone"]
scale = Vector2( 0.155, 0.185 )
texture = ExtResource( 10 )
centered = false

[node name="Label" type="Label" parent="Control/WarZone"]
margin_left = 1.0
margin_top = 129.0
margin_right = 281.0
margin_bottom = 158.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "WAR ZONE"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Desert" type="Button" parent="Control"]
margin_left = 1188.33
margin_top = 526.982
margin_right = 1488.33
margin_bottom = 726.982
custom_styles/normal = SubResource( 1 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="Control/Desert"]
scale = Vector2( 0.155, 0.185 )
texture = ExtResource( 11 )
centered = false

[node name="Label" type="Label" parent="Control/Desert"]
margin_left = 1.0
margin_top = 129.0
margin_right = 281.0
margin_bottom = 158.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "DESERT"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MountainWoodsM" type="Button" parent="Control"]
margin_left = 1537.32
margin_top = 526.982
margin_right = 1837.32
margin_bottom = 726.982
custom_styles/normal = SubResource( 1 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="Control/MountainWoodsM"]
scale = Vector2( 0.155, 0.185 )
texture = ExtResource( 12 )
centered = false

[node name="Label" type="Label" parent="Control/MountainWoodsM"]
margin_left = 1.0
margin_top = 129.0
margin_right = 281.0
margin_bottom = 158.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Mountain woods morning"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MountainWoodsE" type="Button" parent="Control"]
margin_left = 127.666
margin_top = 809.093
margin_right = 427.666
margin_bottom = 1009.09
custom_styles/normal = SubResource( 1 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="Control/MountainWoodsE"]
scale = Vector2( 0.155, 0.185 )
texture = ExtResource( 13 )
centered = false

[node name="Label" type="Label" parent="Control/MountainWoodsE"]
margin_left = 1.0
margin_top = 129.0
margin_right = 281.0
margin_bottom = 158.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Mountain woods evening"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MountainWoodsN" type="Button" parent="Control"]
margin_left = 476.158
margin_top = 809.093
margin_right = 776.158
margin_bottom = 1009.09
custom_styles/normal = SubResource( 1 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="Control/MountainWoodsN"]
scale = Vector2( 0.155, 0.185 )
texture = ExtResource( 14 )
centered = false

[node name="Label" type="Label" parent="Control/MountainWoodsN"]
margin_left = 1.0
margin_top = 129.0
margin_right = 281.0
margin_bottom = 158.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Mountain woods night"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SunsetForest" type="Button" parent="Control"]
margin_left = 836.98
margin_top = 809.093
margin_right = 1136.98
margin_bottom = 1009.09
custom_styles/normal = SubResource( 1 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="Control/SunsetForest"]
scale = Vector2( 0.155, 0.185 )
texture = ExtResource( 15 )
centered = false

[node name="Label" type="Label" parent="Control/SunsetForest"]
margin_left = 1.0
margin_top = 129.0
margin_right = 281.0
margin_bottom = 158.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "SUNSET FOREST"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Control"]
margin_left = 698.467
margin_top = 30.204
margin_right = 1259.47
margin_bottom = 161.204
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0.858824, 0.807843, 0.0588235, 1 )
text = "REGIONS"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackButton" type="Button" parent="Control"]
margin_left = 24.9452
margin_top = 24.9452
margin_right = 324.945
margin_bottom = 134.945
icon = ExtResource( 16 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="Control"]
margin_left = 1592.42
margin_top = 136.333
margin_right = 1890.42
margin_bottom = 199.333
custom_styles/hover = SubResource( 6 )
custom_styles/pressed = SubResource( 7 )
custom_styles/normal = SubResource( 8 )
custom_fonts/font = SubResource( 9 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0.980392, 0.141176, 0.0313726, 1 )
text = "TO JET SKINS "
icon = ExtResource( 17 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RegionsPopup" type="PopupMenu" parent="."]
margin_left = 560.479
margin_top = 270.778
margin_right = 1418.48
margin_bottom = 785.778
custom_styles/labeled_separator_left = ExtResource( 18 )
custom_styles/hover = ExtResource( 18 )
custom_styles/panel = ExtResource( 18 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="RegionsPopup"]
margin_left = 97.7549
margin_top = 83.0
margin_right = 404.755
margin_bottom = 155.0
custom_fonts/font = SubResource( 10 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "TO EQUIP:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Description" type="Label" parent="RegionsPopup"]
margin_left = 56.0
margin_top = 160.0
margin_right = 814.0
margin_bottom = 362.0
custom_fonts/font = SubResource( 11 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Install the game"

[node name="EquipButton" type="Button" parent="RegionsPopup"]
margin_left = 437.76
margin_top = 379.392
margin_right = 792.76
margin_bottom = 475.392
custom_styles/hover = ExtResource( 21 )
custom_styles/pressed = SubResource( 12 )
custom_styles/normal = ExtResource( 21 )
custom_fonts/font = SubResource( 13 )
text = "Equip"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CloseButton" type="Button" parent="RegionsPopup"]
margin_left = 21.347
margin_top = 10.6735
margin_right = 92.347
margin_bottom = 78.6735
icon = ExtResource( 22 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Control/Startup" to="." method="_on_Startup_pressed"]
[connection signal="pressed" from="Control/IndianOcean" to="." method="_on_IndianOcean_pressed"]
[connection signal="pressed" from="Control/RokyMountains" to="." method="_on_RokyMountains_pressed"]
[connection signal="pressed" from="Control/SpaceJet" to="." method="_on_SpaceJet_pressed"]
[connection signal="pressed" from="Control/ZebraMountain" to="." method="_on_ZebraMountain_pressed"]
[connection signal="pressed" from="Control/GrassLands" to="." method="_on_GrassLands_pressed"]
[connection signal="pressed" from="Control/BlackCity" to="." method="_on_BlackCity_pressed"]
[connection signal="pressed" from="Control/WarZone" to="." method="_on_WarZone_pressed"]
[connection signal="pressed" from="Control/Desert" to="." method="_on_Desert_pressed"]
[connection signal="pressed" from="Control/MountainWoodsM" to="." method="_on_MountainWoodsM_pressed"]
[connection signal="pressed" from="Control/MountainWoodsE" to="." method="_on_MountainWoodsE_pressed"]
[connection signal="pressed" from="Control/MountainWoodsN" to="." method="_on_MountainWoodsN_pressed"]
[connection signal="pressed" from="Control/SunsetForest" to="." method="_on_SunsetForest_pressed"]
[connection signal="pressed" from="Control/BackButton" to="." method="_on_BackButton_pressed"]
[connection signal="pressed" from="Control/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="RegionsPopup/EquipButton" to="." method="_on_EquipButton_pressed"]
[connection signal="pressed" from="RegionsPopup/CloseButton" to="." method="_on_CloseButton_pressed"]
